--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html xmlns:th="http://thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="ISO-8859-1">
+    <title>registered</title>
+
 </head>
 <body>
-<h1>Welcome to YourSurvey</h1>
+<div class="container">
+    <h4><a th:href="@{/register}">Registrieren</a></h4>
+    <h4><a th:href="@{/login}">Login</a></h4>
+</div>
 
 </body>
 </html>
