--- a/src/main/resources/templates/registered.html
+++ b/src/main/resources/templates/registered.html
@@ -6,7 +6,7 @@
 
 </head>
 <body>
-<div class="container text-center">
+<div class="container">
     <h3>You have signed up!</h3>
     <h4><a th:href="@{/login}">Login</a></h4>
 </div>
