--- a/src/main/resources/templates/user_dashboard.html
+++ b/src/main/resources/templates/user_dashboard.html
@@ -8,5 +8,7 @@
 <h1>User Dashboard</h1>
 <a th:href="@{/create_survey}" class="button">Umfrage Erstellen</a>
 <a th:href="@{/allSurveys}" class="button">Meine Umfragen</a>
+<a th:href="@{/answer}" class="button">Beantworten</a>
+<h1 th:text="${test}"></h1>
 </body>
 </html>
