--- a/src/main/resources/templates/allSurvey.html
+++ b/src/main/resources/templates/allSurvey.html
@@ -1,19 +1,32 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>JSON Test</title>
 </head>
 <body>
-
-<table class="table table-hover table-bordered">
-    <tr th:each="survey,iterationStatus : ${surveys}">
-
-        <td th:text="${iterationStatus.count}">1</td>
-        <td th:text="${survey}">001</td>
-
-    </tr>
-</table>
-
+<div id="myData"></div>
+<script>
+    fetch('/allSurveys')
+        .then(function (response) {
+            return response.json();
+        })
+        .then(function (data) {
+            appendData(data);
+        })
+        .catch(function (err) {
+            console.log('error: ' + err);
+        });
+    function appendData(data) {
+        var mainContainer = document.getElementById("myData");
+        for (var i = 0; i < data.length; i++) {
+            var div = document.createElement("div");
+            div.innerHTML = 'id: ' + data[i].option1 + ' ' + data[i].option2;
+            mainContainer.appendChild(div);
+        }
+    }
+</script>
 </body>
 </html>
