--- a/src/main/resources/templates/create_survey.html
+++ b/src/main/resources/templates/create_survey.html
@@ -2,49 +2,30 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>create_survey</title>
+    <title>Title</title>
 </head>
 <body>
-<h1>umfrage Erstellennnnnn</h1>
+
 
 <h1 th:object="${survey}"></h1>
-<form th:action="@{/creating_survey}" th:object="${survey}" method="post">
-    <div>
-        <label>Umfrage Namen</label>
-        <input type="text" th:field="*{surveyName}" placeholder="type in your Survey question" >
-    </div>
-    <div>
-        <label>Question</label>
-        <input type="text" th:field="*{question}" placeholder="type in your question" >
-    </div>
-    <div>
-        <label>Answer1</label>
-        <input type="text" th:field="*{option1}" placeholder="option" >
-    </div>
-    <div>
-        <label>Answer2</label>
-        <input type="text" th:field="*{option2}" placeholder="option" >
-    </div>
-    <div>
-        <label>Answer3</label>
-        <input type="text" th:field="*{option3}" placeholder="option" >
-    </div>
-    <div>
-        <label>Answer4</label>
-        <input type="text" th:field="*{option4}" placeholder="option" >
-    </div>
+<form th:action="@{/add_survey}" th:object="${survey}" method="post">
 
     <div>
-        <label>Sonstiges</label>
-        <input type="text" th:field="*{custom}" placeholder="sonstige bemerkung" >
+        <label>Email</label>
+        <input type="text" th:field="*{surveyName}" placeholder="example@hotmail.com" >
     </div>
-
     <div>
-        <label>Nachricht an alle Teilnehmer</label>
-        <input type="text" th:field="*{hostMessage}" placeholder="nachricht" >
+        <label>First Name</label>
+        <input type="text" th:field="*{question}" placeholder="Oliver" >
+    </div>
+    <div>
+        <label>Last Name</label>
+        <input type="text" th:field="*{answer}" placeholder="Trump" >
     </div>
 
-    <input type="submit" value="Erstellen">
+    <input type="submit" value="Sign Up">
 </form>
+
+
 </body>
 </html>
