--- a/src/main/resources/templates/creating_survey.html
+++ b/src/main/resources/templates/creating_survey.html
@@ -5,6 +5,21 @@
     <title>Title</title>
 </head>
 <body>
-<h1>Survey Erstellt</h1>
+
+<form id="survey" action="@{/addSurvey}" th:object="${survey}" method="post">
+    <div>
+        <label>Umfrage Namen</label>
+        <input type="text" th:field="*{surveyName}" placeholder="type in the Survey name" >
+    </div>
+    <div>
+        <label>Umfrage Namen</label>
+        <input type="text" th:field="*{question}" placeholder="type in your question" >
+    </div>
+    <div>
+        <label>Umfrage Namen</label>
+        <input type="text" th:field="*{answer}" placeholder="type in your answer" >
+    </div>
+    <input type="submit" value="Erstellen">
+</form>
 </body>
 </html>
