--- a/src/main/resources/templates/registered.html
+++ b/src/main/resources/templates/registered.html
@@ -3,13 +3,25 @@
 <head>
     <meta charset="ISO-8859-1">
     <title>registered</title>
-
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<div class="container">
+
+<div class="header">
+    <h1 class="headh1">Learn Fast</h1>
+</div>
+<form class="whiteSpaceSmall"></form>
+<div class="form-center">
+
+
+<div class="link">
     <h3>You have signed up!</h3>
     <h4><a th:href="@{/login}">Login</a></h4>
 </div>
+
+    <div class="footer">
+        <p>Verantwortlich: Delos Joel Herold, E-mail: delos.herold@stud.fra-uas.de</p>
+    </div>
 
 </body>
 </html>
