--- a/src/main/resources/templates/user_dashboard.html
+++ b/src/main/resources/templates/user_dashboard.html
@@ -1,4 +1,21 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Title</title>
+</head>
+<body>
+<h1>test</h1>
+</body>
+</html>
+
+
+
+
+
+
+<!--
+<!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
@@ -267,3 +284,5 @@
 
 </body>
 </html>
+
+-->
